2005-02-04  John Luke  <john.luke@gmail.com>

	* src/Parser/AST/Modifier.cs: add Static to Class
	* src/Parser/generated/cs.ATG: add Modifier.Static to TypeModifiers
	* src/Parser/generated/Modifiers.cs: static & abstract or
	static & sealed is invalid 

2005-02-03  John Luke  <john.luke@gmail.com>

	* Makefile.am: add PrettyPrintOptions.cs
	* src/PrettyPrinter/PrettyPrintVisitor.cs:
	* src/PrettyPrinter/OutputFormatter.cs
	* src/PrettyPrinter/PrettyPrintOptions.cs:
	update these from SD, and make it output
	mono-like format by default (not done yet)

2005-01-31  John Luke  <john.luke@gmail.com>

	* src/Parser/generated/Error.cs: lets not
	force people to parse the error message
	instead use an ErrorInfo struct

2005-01-31  John Luke  <john.luke@gmail.com>

	* src/Lexer/Lexer.cs:
	* src/Parser/generated/cs.ATG:
	* src/Parser/generated/Parser.cs:
	warning fixes
	* src/Parser/generated/Makefile:
	add the equivalent of gen.bat to generate
	a new parser from cs.ATG

2005-01-28  John Luke  <john.luke@gmail.com>

	* src/Parser/AST/LookupTableVisitor.cs:
	capture parameters in the lookup table for completion
	fixes bug# 71687

2005-01-28  John Luke  <john.luke@gmail.com>

	* src/*: Merged in sync with #D parser.
	makes catch (Exception e) { e. } work and a few
	other small fixes

2004-05-24  Lluis Sanchez Gual  <lluis@ximian.com>

	* src/Parser/AST/AbstractNode.cs: Lazily create children arraylist.

2004-03-29  Todd Berman  <tberman@sevenl.net>

	* src/Parser/Expressions/PrimitiveExpression.cs: stop requiring ICU 

2004-03-21  Todd Berman  <tberman@sevenl.net>

	* src/*: Merged in sync with #D parser. Renamespace to ICSharpCode